testsuite/escript/errors/errors009-int-out-of-range.src
var x := 123456789123456789;
print( x );

// OG compiler does not notice this error.
force_compile_error();
